# Presto-Editor

./: .gitignore  .tmuxp.yaml  CMakeLists.txt  run.sh  watch-run.sh
Scenes/: level.cpp  level.json  level.prsc
src/: CMakeLists.txt  PrestoEditor.cpp  pch.h
src/EditorState/: CMakeLists.txt  EditorState.cpp  EditorState.h
src/UI/: CMakeLists.txt  Constants.h  MainFrame.cpp  MainFrame.h
src/UI/Components/: MainMenuBar.cpp  MainMenuBar.h
src/UI/Frames/: MainFrame.cpp  MainFrame.h
src/UI/Panels/: RenderPanel.cpp  RenderPanel.h  ScenePanel.cpp  ScenePanel.h
